Исправила замечания ревьюера